--- a/kubernetes/launch_jobs.yaml
+++ b/kubernetes/launch_jobs.yaml
@@ -1,12 +1,12 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: meep_controller
+  name: meep-controller
 spec:
   template:
     spec:
       containers:
-        - name: meep_controller
+        - name: meep-controller
           image:  docker.io/ctvqfq/bunny_ai/spie
           command: ["python3", "kubernetes/run_data_generation.py", "-config", "config.yaml", ">", "/develop/results/log.out"]
           resources:
@@ -39,7 +39,7 @@ spec:
           persistentVolumeClaim:
             claimName: meep-code
         - name: meep-results
-           persistentVolumeClaim:
+          persistentVolumeClaim:
             claimName: meep-results
 
       restartPolicy: Never
