--- a/kubernetes/config.yaml
+++ b/kubernetes/config.yaml
@@ -7,7 +7,7 @@
 # - path_results: path to store generated job files
 
 path_code: https://github.com/Kovaleski-Research-Lab/surrogate_model 
-path_image: docker.io/ctvqfq/bunny_ai/spie
+path_image: docker.io/ctvqfq/bunny_ai:spie
 path_template: kube_files/templates/job.txt
 path_results: /develop/results
 
