--- a/kubernetes/launch_jobs.yaml
+++ b/kubernetes/launch_jobs.yaml
@@ -7,7 +7,7 @@ spec:
     spec:
       containers:
         - name: meep-controller
-          image:  docker.io/ctvqfq/bunny_ai/spie
+          image: docker.io/ctvqfq/bunny_ai:spie
           command: ["python3", "kubernetes/run_data_generation.py", "-config", "config.yaml", ">", "/develop/results/log.out"]
           resources:
             limits:
