--- a/kubernetes/config.yaml
+++ b/kubernetes/config.yaml
@@ -6,7 +6,7 @@
 # - path_template: path to kubernetes job template
 # - path_results: path to store generated job files
 
-path_code: https://github.com/Kovaleski-Research-Lab/surrogate_model 
+path_code: https://github.com/Kovaleski-Research-Lab/surrogate_model.git
 path_image: docker.io/ctvqfq/bunny_ai:spie
 path_template: kube_files/templates/job.txt
 path_results: /develop/results
