--- a/kubernetes/monitor_pod.yaml
+++ b/kubernetes/monitor_pod.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
     - name: monitor
-      image: docker.io/ctvqfq/bunny_ai:spie
+      image: docker.io/ctvqfq/bunny_ai:spie-1.0
       stdin: True
       tty: True
       resources:
