--- a/kubernetes/launch_jobs.yaml
+++ b/kubernetes/launch_jobs.yaml
@@ -26,7 +26,7 @@ spec:
       initContainers:
         - name: git-cloner
           image: alpine/git
-          command: ["/bin/bash","-c","rm -r * && git clone https://github.com/Kovaleski-Research-Lab/surrogate_model.git ."]
+          command: ["/bin/sh","-c","rm -r * && git clone https://github.com/Kovaleski-Research-Lab/surrogate_model.git ."]
           volumeMounts:
             - name: meep-code
               mountPath: /develop/code
