--- a/kubernetes/config.yaml
+++ b/kubernetes/config.yaml
@@ -3,27 +3,35 @@
 # Define Paths
 # - path_image: path to public container image
 # - path_template: path to kubernetes job template
-# - path_results: path to store generated job files
+# - path_simulations: path to store simulations (pvc)
+# - path_sim_job_files: path to store generated job files (local)
 
 path_image: docker.io/ctvqfq/bunny_ai:spie-1.0
-path_template: /develop/code/kubernetes/kube_files/templates/job.txt
-path_results: /develop/results
+path_template: kube_files/templates/job.txt
 
-# Define Computing Resources
+path_simulations: /develop/results
+path_sim_job_files: C:/Users/Slane/Downloads/sim_job_yamls
+
+# Define Computing Environment
 # - num_mem_lim: limits of random access memory
 # - num_mem_req: requested random access memory
 # - num_cpus_per_op: number of cpus resource for each simulation, denote as a.
 # - num_parallel_ops: number of simulations happening in parallel, Denoate as b.
 # - num_cpus_total: number of cpus used at once in computing cluster, denote as c | c = a * b.
 
-num_mem_lim: 1T
-num_mem_req: 800G
+num_mem_lim: 100G
+num_mem_req: 64G
 num_cpus_per_op: 32
-num_parallel_ops: 64
-num_cpus_total: 2048
+#num_parallel_ops: 64
+#num_cpus_total: 2048
+num_parallel_ops: 5
+num_cpus_total: 160
+
+
+namespace: gpn-mizzou-muem
+kill_tag: sim
 
 # Define Simulation
 
 num_sims: 500
-
 
