--- a/src/config.yaml
+++ b/src/config.yaml
@@ -12,8 +12,9 @@ torch_home: '/develop/pretrained_models'
 #--------------------------------
 #       Training Params
 #--------------------------------
-batch_size: 8
-num_epochs: 200
+batch_size: 4
+#batch_size: 8
+num_epochs: 10
 
 accelerator: 'gpu' 
 gpu_config: [True, [0]]
@@ -42,7 +43,7 @@ mcl_params:
 #--------------------------------
 #path_root: '/home/marshall/research/cai_2023'
 path_root: '/develop/'
-path_data: 'data/'
+path_data: 'data/spie_journal_2023/data_subset/'
 path_train: 'train/'
 path_valid: 'valid/'
 path_model: 'model_checkpoints/'
@@ -144,7 +145,6 @@ decay_rate : 0.0001
 #-------------------------
 
 resolution : 80
-#resolution : 40
 lattice_size : 0.680
 grid_size : 3 
 
