--- a/kubernetes/training/kube_files/templates/gpu-job.yaml
+++ b/kubernetes/training/kube_files/templates/gpu-job.yaml
@@ -5,7 +5,7 @@ kind: Job
 
 # set the name of the job
 metadata:
-  name: training-job
+  name: training
 
 spec:
   # how many times should the system
@@ -40,7 +40,8 @@ spec:
           #    value: INFO
           # the command to run when the container starts
           command: ["/bin/sh", "-c"]
-          args: ["git clone https://github.com/Kovaleski-Research-Lab/surrogate_model.git .; cd /develop/code/src/core/; python3 preprocess_data.py > /develop/data/spie_journal_2023/train_logs/test.log"]
+          #args: ["git clone https://github.com/Kovaleski-Research-Lab/surrogate_model.git .; cd /develop/code/src/core/; python3 preprocess_data.py > /develop/data/spie_journal_2023/train_logs/test.log"]
+          args: ["git clone https://github.com/Kovaleski-Research-Lab/surrogate_model.git .; cd /develop/code/src/core/; touch /develop/data/spie_journal_2023/kube_logs/test.txt"]
           # define the resources for this container
           resources:
             # limits - the max given to the container
