--- a/kubernetes/training/train_config.yaml
+++ b/kubernetes/training/train_config.yaml
@@ -7,7 +7,8 @@
 # - path_simulations: path to store simulations (pvc)
 # - path_sim_job_files: path to store generated job files (local)
 
-path_image: docker.io/kovaleskilab/meep_ml:spie-1.2
+#path_image: docker.io/kovaleskilab/meep_ml:spie-1.2
+path_image: docker.io/ctvqfq/bunny_ai:spie-1.2
 path_template: kube_files/templates/gpu-job.yaml
 
 path_simulations: /develop/results
