--- a/kubernetes/training/train_config.yaml
+++ b/kubernetes/training/train_config.yaml
@@ -26,7 +26,7 @@ num_mem_lim: 240G
 num_mem_req: 200G
 num_cpus_per_op: 40
 #num_cpus_total: 2048
-#num_parallel_ops: 32
+num_parallel_ops: 1
 #num_cpus_total: 160
 
 namespace: gpn-mizzou-muem
@@ -34,3 +34,5 @@ kill_time_min: 30
 kill_tag: train
 
 experiment: 1
+num_sims: 1
+start_group_id: 0
