--- a/src/config.yaml
+++ b/src/config.yaml
@@ -144,7 +144,8 @@ decay_rate : 0.0001
 #   Simulation Parameters
 #-------------------------
 
-resolution : 80
+#resolution : 80
+resolution : 10
 lattice_size : 0.680
 grid_size : 3 
 
