--- a/kubernetes/monitor_pod.yaml
+++ b/kubernetes/monitor_pod.yaml
@@ -6,6 +6,17 @@ spec:
   containers:
     - name: monitor
       image: docker.io/ctvqfq/bunny_ai:spie-1.2
+      env:
+        - name: RCLONE_NAUTILUS_TYPE
+          value: s3
+        - name: RCLONE_CONFIG_NAUTILUS_ENDPOINT
+          value: http://rook-ceph-rgw-centrals3.rook-central
+        - name: RCLONE_CONFIG_NAUTILUS_PROVIDER
+          value: Other
+        - name: RCLONE_CONFIG_NAUTILUS_ACCESS_KEY_ID
+          value: JPKIHDAZY41Q5IPG1SPM
+        - name: RCLONE_CONFIG_NAUTILUS_SECRET_ACCESS_KEY
+          value: 2AZNOB1ivWEGKV1UYK6HDb5KuEJJ0s5dxDBxQPEE
       stdin: True
       tty: True
       resources:
@@ -24,3 +35,7 @@ spec:
         claimName: meep-results
 
   restartPolicy: Never
+
+#export RCLONE_CONFIG_NAUTILUS_ACCESS_KEY_ID=JPKIHDAZY41Q5IPG1SPM
+#export RCLONE_CONFIG_NAUTILUS_SECRET_ACCESS_KEY=2AZNOB1ivWEGKV1UYK6HDb5KuEJJ0s5dxDBxQPEE
+#envsubst < monitor_pod.yaml | kubectl apply -f -
