--- a/src/config.yaml
+++ b/src/config.yaml
@@ -7,6 +7,7 @@ resim :
 torch_home: '/develop/pretrained_models'
 seed: [True, 1337]
 train: True
+exp_name: 'baseline'
 model_id: 'baseline_2'
 prev_model_id: 'baseline_1'
 #torch_home: '~/.cache/torch/'
