--- a/kubernetes/datagen/launch_jobs.yaml
+++ b/kubernetes/datagen/launch_jobs.yaml
@@ -8,7 +8,7 @@ spec:
       containers:
         - name: meep-controller
           image: docker.io/ctvqfq/bunny_ai:spie-1.0
-          command: ["python3", "kubernetes/run_data_generation.py", "-config", "kubernetes/config.yaml"]
+          command: ["python3", "kubernetes/datagen/run_datagen.py", "-config", "kubernetes/datagen/config.yaml"]
           resources:
             limits:
               memory: 8G
