--- a/src/config.yaml
+++ b/src/config.yaml
@@ -7,23 +7,23 @@ resim : 0
 torch_home: '/develop/pretrained_models'
 seed: [True, 1337]
 train: True
-exp_name: 'baseline'
-model_id: 'baseline_2'
-prev_model_id: 'baseline_1'
+exp_name: 'new_baseline_2'
+model_id: 'new_baseline_2'
+prev_model_id: 'new_baseline_1'
 #torch_home: '~/.cache/torch/'
 
 #--------------------------------
 #       Training Params
 #--------------------------------
 batch_size: 8 
-num_epochs: 10
+num_epochs: 100
 
 mcl_params:
-    alpha: 0     #near-field
+    alpha: 1     #near-field
     #beta: 1     #far-field
-    gamma: 1     #phase
+    gamma: 0     #phase
     delta: 0     #derivatives
-    epsilon: 0   #intensity
+    epsilon: 1   #intensity
 
 initial_intensities :
     2881: 2.133954817261386e-05
@@ -33,8 +33,8 @@ initial_intensities :
     1060: 0.00015713650643846212
 
 transfer_learn: False
-load_checkpoint: False # only True when doing reconstruction (loads in a model from disk) 
-freeze_encoder: False
+load_checkpoint: True # only True when doing reconstruction (loads in a model from disk) 
+freeze_encoder: True 
 
 weights: 
 num_classes: 1
